TODO: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
WISH: OnTheSpot editing, or maybe switch to miiiiiiif
WISH: just for fun, do shade and tint with XRender.

        - optionally embed a perl interpreter, which can be used for more
          intelligent/customized selection support, visual feedback,
          menus, tabs etc. See the urxvtperl manpage.
        - fix directory permissions on install.
        - improved sched_yield support.

6.2  Mon Jan  2 16:03:01 CET 2006
        - implemented intensityStyles option which enables/disables bold/blink
          selecting high intensity foreground/background colours, suggested by
          Chuck Blake.
        - move iso14755 character feedback box out of the way if it would
          obscure the mouse cursor position.
	- replaced callback.h by a fixed version from gvpe that correctly
          returns the callback result (affects new -pty-fd semantics in urxvtc
          on a few architectures). Reported by darix.
        - include one trailing space in rectangular selections to indicate
          the inserted newline (yeah, weird, but visually more pleasing).
        - try to use sched_yield to (drastically) improve terminal data
          transfer efficiency.
        - further minor cleanups.

6.1  Tue Dec 27 13:23:40 CET 2005
	- update iso8859-7 table (euro and drachma round-trip et al.).
	- fix a crash when the selection scrolls out of the scrollback
          while the user still drags.
        - selections that were partially scrolled out of the window were
          not drawn correctly.
        - lines newly scrolled in were not initialized properly, leading
          to extremely long lines and (hopefully) some segfaults.
        - iso14755 overlay position was wrong.
        - iso14755 overlay now displays rendition info, too.
        - use unicode white space class instead of hardcoded values for
          stripping whitespace.